Added build workflow and Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-S3_BUCKET_NAME="my-bucket"
+SECRET="123456789"
+
+SQLITE_FILE="test.db"
+
+ADMIN_USERNAME="eric"
+ADMIN_PASSWORD="test"
+
+S3_BUCKET_NAME="fstop-local"
 S3_BUCKET_REGION="us-west-2"
+S3_BUCKET_MEDIA_FOLDER="media"
+S3_BUCKET_UPLOAD_FOLDER="upload"
+S3_BUCKET_PUBLIC_BASE_URL="https://fstop-local.s3.us-west-2.amazonaws.com/"
