--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5000:8080"
     volumes:
-      - photos-data:/data/
+      - ./:/data/
 
     environment:
       SECRET: "VSp4nQn7KHPRK9wNZrjCYHSJs"
@@ -26,6 +26,3 @@ services:
 
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-
-volumes:
-  photos-data: null
