Added API routes for importing

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-SECRET="123456789"
+SECRET=""
+API_KEY=""
 
-SQLITE_FILE="test.db"
+SQLITE_FILE="photos.db"
 
-ADMIN_USERNAME="eric"
+ADMIN_USERNAME="test"
 ADMIN_PASSWORD="test"
 
-S3_BUCKET_NAME="fstop-local"
+S3_BUCKET_NAME="my-bucket"
 S3_BUCKET_REGION="us-west-2"
 S3_BUCKET_MEDIA_FOLDER="media"
 S3_BUCKET_UPLOAD_FOLDER="upload"
-S3_BUCKET_PUBLIC_BASE_URL="https://fstop-local.s3.us-west-2.amazonaws.com/"
+S3_BUCKET_PUBLIC_BASE_URL="https://my-bucket.s3.us-west-2.amazonaws.com/"
