--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Build and deploy
+name: PR Build
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ env:
   LATEST_BACKEND_IMAGE: ghcr.io/${{ github.repository }}/fstop:latest
 
 jobs:
-  backend-build:
+  pr-build:
     runs-on: ubuntu-latest
     steps:
       - name: Check Out Repo
