Add support for multiple viewer passwords

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ SQLITE_FILE="photos.db"
 
 ADMIN_USERNAME="test"
 ADMIN_PASSWORD="test"
+VIEWER_PASSWORDS="test1,test2"
 
 S3_BUCKET_NAME="my-bucket"
 S3_BUCKET_REGION="us-west-2"
